--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/chrome": "^0.0.122",
     "@types/gapi": "^0.0.39",
     "@types/jest": "^26.0.13",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "eslint": "^7.8.1",
@@ -25,6 +26,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
     "ts-loader": "^8.0.3",
