--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "target": "ES2015"
     },
     "include": [
-        "src"
+        "src",
+        "node_modules/typescript/lib/lib.dom.d.ts"
     ]
 }
