--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,11 @@
         "outDir": "dist",
         "sourceMap": true,
         "strict": true,
-        "target": "ES2015"
+        "target": "es6"
     },
     "include": [
         "src",
+        "node_modules/typescript/lib/lib.dom.d.ts",
         "node_modules/typescript/lib/lib.dom.d.ts"
     ]
 }
