--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,6 @@
   "permissions": [
     "tabs",
     "storage"
-  ]
+  ],
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
